@@ -8,7 +8,8 @@ Simon Wenner:
  * Check libpurple and glib minor version number in configure
 
 Christian Wäckerlin:
- * Libotp: System of error numbers (OtpError) implemented (API changed)
+ * Libotp: System of error syndromes (OtpError) implemented
+ * Lipotp: otp_encrypt, otp_decrypt, otp_encrypt_warning are now transactional
 
 
 
